--- a/inserimentoDocenti.html
+++ b/inserimentoDocenti.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inserimento Docenti</title>
+    <title>Modulo Inserimento Docenti</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -13,222 +13,108 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/insdocenti.css" />
   </head>
-  <body>
-    <header id="site-header" class="site-header">
-    </header>
-    <!-- ./header -->
+  <body class="body-docente">
+    <header id="site-header"></header>
+    <h1 class="text-center pt-3">Modulo di Inserimento Docenti</h1>
 
-    <div class="containerTutto shadow">
-      <div class="containerTitle text-center mb-4">
-        <h1>Form di Inserimento Docente</h1>
+    <form id="inserisciDocenti" class="row g-3 form-studente">
+      <div class="col-md-5">
+        <label for="nome_docente" class="form-label">Nome</label>
+        <input type="text" class="form-control" id="nome_docente" name="nome" required />
+      </div>
+      <div class="col-md-5">
+        <label for="cognome_docente" class="form-label">Cognome</label>
+        <input type="text" class="form-control" id="cognome_docente" name="cognome" required />
       </div>
 
-      <form id="formDocente">
-        <div class="row">
-          <div class="col">
-            <label for="nome">Nome:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="nome"
-              name="nome"
-              placeholder="Nome"
-              required
-            />
-          </div>
-
-          <div class="col">
-            <label for="cognome">Cognome:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="cognome"
-              name="cognome"
-              placeholder="Cognome"
-              required
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-        <div class="row">
-          <div class="col">
-            <label for="sesso">Sesso:</label>
-            <select class="inputs form-select" id="sesso" name="sesso" required>
-              <option value="" disabled selected>Seleziona sesso</option>
-              <option value="maschio">Maschio</option>
-              <option value="femmina">Femmina</option>
-              <option value="altro">Altro</option>
-            </select>
-          </div>
-
-          <div class="col">
-            <label for="email">Email:</label>
-            <input
-              class="inputs form-control text-lowercase"
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Email"
-              required
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-          <div class="col">
-            <label for="telefono">Telefono:</label>
-            <input
-              class="inputs form-control"
-              type="tel"
-              id="telefono"
-              name="telefono"
-              placeholder="Telefono"
-              required
-            />
-          </div>
-          <div class="col">
-            <label for="dataNascita">Data di nascita:</label>
-            <input
-              class="inputs form-control"
-              type="date"
-              id="dataNascita"
-              name="dataNascita"
-              required
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-          <div class="col">
-            <label for="cf">Codice Fiscale:</label>
-            <input
-              class="inputs form-control text-uppercase"
-              type="text"
-              id="cf"
-              name="cf"
-              placeholder="Codice Fiscale"
-              required
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-          <div class="col">
-            <label for="note">Note:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="note"
-              name="note"
-              placeholder="Note (facoltative)"
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-          <div class="col">
-            <label for="materiaInsegnata">Materia insegnata:</label>
-            <select
-              class="inputs form-select"
-              id="materiaInsegnata"
-              name="materiaInsegnata"
-              required
-            >
-              <option value="" disabled selected>Seleziona materia</option>
-              <option value="Italiano">Italiano</option>
-              <option value="Matematica">Matematica</option>
-              <option value="Inglese">Inglese</option>
-              <option value="Storia">Storia</option>
-              <option value="Geografia">Geografia</option>
-              <option value="Filosofia">Filosofia</option>
-            </select>
-          </div>
-          <div class="col">
-            <label for="dataAssunzione">Data di assunzione:</label>
-            <input
-              class="inputs form-control"
-              type="date"
-              id="dataAssunzione"
-              name="dataAssunzione"
-              required
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- INDIRIZZO -->
-        <div class="row">
-          <div class="col">
-            <label for="via">Via:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="via"
-              name="via"
-              placeholder="Via"
-            />
-          </div>
-          <div class="col">
-            <label for="cap">CAP:</label>
-            <input
-              class="inputs form-control"
-              type="number"
-              id="cap"
-              name="cap"
-              placeholder="CAP"
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-        <div class="row">
-          <div class="col">
-            <label for="comune">Comune:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="comune"
-              name="comune"
-              placeholder="Comune"
-            />
-          </div>
-          <div class="col">
-            <label for="provincia">Provincia:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="provincia"
-              name="provincia"
-              placeholder="Provincia"
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-          <div class="col">
-            <label for="nazione">Nazione:</label>
-            <input
-              class="inputs form-control"
-              type="text"
-              id="nazione"
-              name="nazione"
-              placeholder="Nazione"
-            />
-          </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="col-12 d-flex flex-row-reverse">
-        <button type="submit" class="btn invia-form me-4">Invia</button>
+      <div class="col-md-5">
+        <label for="dataNascita_docente" class="form-label">Data di Nascita</label>
+        <input type="date" class="form-control" id="dataNascita_docente" name="dataNascita" required />
       </div>
-      </form>
-    </div>
-    <footer id="site-footer" class="pt-5"></footer>
+      <div class="col-md-5">
+        <label for="CF_docente" class="form-label">Codice Fiscale</label>
+        <input type="text" class="form-control text-uppercase" id="CF_docente" name="cf" required />
+      </div>
 
+      <div class="col-md-5">
+        <label for="luogoNascita_docente" class="form-label">Luogo di nascita</label>
+        <input type="text" class="form-control" id="luogoNascita_docente" name="luogoNascita" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="nazionalita_docente" class="form-label">Nazionalità</label>
+        <input type="text" class="form-control" id="nazionalita_docente" name="nazionalita" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="genere_docente" class="form-label">Genere</label>
+        <select id="genere_docente" name="genere" class="form-select" aria-label="Default select example" required>
+          <option selected>Seleziona Genere</option>
+          <option value="M">M</option>
+          <option value="F">F</option>
+          <option value="Altro">Altro</option>
+        </select>
+      </div>
+
+      <div class="col-md-5">
+        <label for="mail_docente" class="form-label">eMail</label>
+        <input type="email" class="form-control text-lowercase" id="mail_docente" name="email" required />
+      </div>
+
+      <div class="col-md-5">
+        <label for="telefono_docente" class="form-label">Telefono</label>
+        <input type="tel" class="form-control" id="telefono_docente" name="telefono" required />
+      </div>
+
+      <div class="col-md-5">
+        <label for="via_docente" class="form-label">Via</label>
+        <input type="text" class="form-control" id="via_docente" name="via" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="cap_docente" class="form-label">Cap</label>
+        <input type="number" class="form-control" id="cap_docente" name="cap" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="comune_docente" class="form-label">Comune</label>
+        <input type="text" class="form-control" id="comune_docente" name="comune" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="provincia_docente" class="form-label">Provincia</label>
+        <input type="text" class="form-control" id="provincia_docente" name="provincia" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="nazione_docente" class="form-label">Nazione</label>
+        <input type="text" class="form-control" id="nazione_docente" name="nazione" />
+      </div>
+
+      <div class="col-md-5">
+        <label for="selectMateria" class="form-label">Materia insegnata</label>
+        <select id="selectMateria" name="materiaInsegnata" class="form-select" aria-label="Default select example" required>
+          <option selected>Seleziona Materia</option>
+          <option value="Italiano">Italiano</option>
+          <option value="Matematica">Matematica</option>
+          <option value="Inglese">Inglese</option>
+          <option value="Storia">Storia</option>
+          <option value="Geografia">Geografia</option>
+          <option value="Filosofia">Filosofia</option>
+        </select>
+      </div>
+
+      <div class="col-md-5">
+        <label for="note_docente" class="form-label">Note</label>
+        <input type="text" class="form-control" id="note_docente" name="note" />
+      </div>
+
+      <div class="col-11 d-flex flex-row-reverse">
+        <button type="submit" class="btn invia-form">Invia</button>
+      </div>
+    </form>
+
+    <footer id="site-footer"></footer>
 
     <script src="/assets/js/main.js"></script>
     <script
