--- a/ricerca.html
+++ b/ricerca.html
@@ -114,7 +114,7 @@
                         <td>${s.infoPersonali.cognome}</td>
                         <td>${s.infoPersonali.email}</td>
                         <td>${s.infoPersonali.tel}</td>
-                      <td><a class="btn btn-primary btn-altro" href="http://localhost:3000/studente/${s.id}" target="_blank">altro</a></td>
+                      <td><a class="btn invia-form btn-altro" href="http://localhost:3000/studente/${s.id}" target="_blank">altro</a></td>
                       </tr>
                     `).join('')}
                   </tbody>
@@ -143,7 +143,7 @@
                         <td>${d.infoPersonali.cognome}</td>
                         <td>${d.infoPersonali.email}</td>
                         <td>${d.infoPersonali.telefono}</td>
-                        <td><a class="btn btn-primary btn-altro" href="http://localhost:3000/docente/${d.id}" target="_blank">altro</a></td>
+                        <td><a class="btn btn-altro" href="http://localhost:3000/docente/${d.id}" target="_blank">altro</a></td>
                       </tr>
                     `).join('')}
                   </tbody>
